--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -10,9 +11,10 @@ android {
         applicationId "com.teguholica.hepipay"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -30,9 +32,15 @@ dependencies {
     implementation 'com.github.stellar:java-stellar-sdk:0.8.0'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.github.kenglxn.QRGen:android:2.5.0'
+    implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.20.0'
+    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.20.0"
+    implementation 'com.parse.bolts:bolts-android:1.4.0'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
