--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.teguholica.hepipay">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
     <application
+            android:name=".App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.teguholica.hepipay.ui.scanner.ScannerActivity" android:launchMode="singleTask">
+        <activity android:name=".ui.signup.SignUpActivity">
         </activity>
-        <activity android:name="com.teguholica.hepipay.ui.new_account.NewAccountActivity">
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,11 +29,53 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.teguholica.hepipay.ui.send.SendActivity"
+                android:name=".ui.scanner.ScannerActivity"
                 android:launchMode="singleTask">
         </activity>
-        <activity android:name="com.teguholica.hepipay.ui.main.MainActivity">
+        <activity android:name=".ui.new_account.NewAccountActivity">
         </activity>
+        <activity
+                android:name=".ui.send.SendActivity"
+                android:launchMode="singleTask">
+        </activity>
+        <activity android:name=".ui.main.MainActivity">
+        </activity>
+
+        <meta-data
+                android:name="com.parse.SERVER_URL"
+                android:value="@string/back4app_server_url"/>
+        <meta-data
+                android:name="com.parse.APPLICATION_ID"
+                android:value="@string/back4app_app_id"/>
+        <meta-data
+                android:name="com.parse.CLIENT_KEY"
+                android:value="@string/back4app_client_key"/>
+        <meta-data
+                android:name="com.parse.push.gcm_sender_id"
+                android:value="id:749857779665"/>
+
+        <service
+                android:name="com.parse.fcm.ParseFirebaseInstanceIdService"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+        <service android:name="com.parse.fcm.ParseFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <receiver
+                android:name="com.parse.ParsePushBroadcastReceiver"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE"/>
+                <action android:name="com.parse.push.intent.OPEN"/>
+                <action android:name="com.parse.push.intent.DELETE"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
