--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.teguholica.hepipay">
+          package="com.koinwarga.client">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -9,14 +9,14 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
-            android:name=".App"
+            android:name="com.koinwarga.client.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.landing.LandingActivity">
+        <activity android:name="com.koinwarga.client.ui.landing.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -24,14 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".ui.scanner.ScannerActivity"
+                android:name="com.koinwarga.client.ui.scanner.ScannerActivity"
                 android:launchMode="singleTask">
         </activity>
         <activity
-                android:name=".ui.send.SendActivity"
+                android:name="com.koinwarga.client.ui.send.SendActivity"
                 android:launchMode="singleTask">
         </activity>
-        <activity android:name=".ui.main.MainActivity">
+        <activity android:name="com.koinwarga.client.ui.main.MainActivity">
         </activity>
     </application>
 
